--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Westerly</title>
+    <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:100' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <meta name="google-site-verification" content="V2UIWZThk6As7Pvb8RfY9xjmUcRqKsrtcW9n7IuA72Y" />
   </head>
   <body>
+
+    <section>
+      <h1>Westerly</h1>
+      <div class="data">Every 30 minutes someone dies due to injuries incured during a fall.</div>
+    </section>
+
+    <section>
+    </section>
+
+    <section>
+      <h2>Contact</h2>
+      <form class="" action="index.html" method="post">
+        <input type="text" name="name" value="Your Name"></br>
+        <input type="text" name="email" value="Email"></br>
+        <input type="text" name="message" value="Message"></br>
+        <input type="button" name="submit" value="Submit">
+      </form>
+    </section>
 
   </body>
 </html>
