--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
 
     <section>
-      <h1>Westerly</h1>
+      <div class="name-container">
+        <h1>Westerly</h1>
+      </div>
       <div class="data">Every 30 minutes someone dies due to injuries incured during a fall.</div>
     </section>
 
@@ -20,10 +22,10 @@
     <section>
       <h2>Contact</h2>
       <form class="" action="index.html" method="post">
-        <input type="text" name="name" value="Your Name"></br>
-        <input type="text" name="email" value="Email"></br>
-        <input type="text" name="message" value="Message"></br>
-        <input type="button" name="submit" value="Submit">
+        <input type="text" name="name" placeholder="Your Name"></br>
+        <input type="text" name="email" placeholder="Email"></br>
+        <input type="text" name="message" placeholder="Message"></br>
+        <button>Submit</button>
       </form>
     </section>
 
