--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <div class="data">Every 30 minutes someone dies due to injuries incured during a fall.</div>
     </section>
 
-    <section>
-    </section>
+    <section></section>
 
     <section>
       <h2>Contact</h2>
@@ -28,6 +27,6 @@
         <button>Submit</button>
       </form>
     </section>
-
+    <footer>Westerly Devices, LLC.</footer>
   </body>
 </html>
