--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <meta name="google-site-verification" content="V2UIWZThk6As7Pvb8RfY9xjmUcRqKsrtcW9n7IuA72Y" />
   </head>
   <body>
-
+    <header>
+      <ul>
+        <li>About</li>
+        <li>W</li>
+        <li>Contact</li>
+      </ul>
+    </header>
     <section>
       <div class="name-container">
         <h1>Westerly</h1>
