--- a/index.html
+++ b/index.html
@@ -6,33 +6,10 @@
     <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <meta name="google-site-verification" content="V2UIWZThk6As7Pvb8RfY9xjmUcRqKsrtcW9n7IuA72Y" />
+    <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="js/animation.js"></script>
   </head>
   <body>
-    <header>
-      <ul>
-        <li>About</li>
-        <li>W</li>
-        <li>Contact</li>
-      </ul>
-    </header>
-    <section>
-      <div class="name-container">
-        <h1>Westerly</h1>
-      </div>
-      <div class="data">Every 30 minutes someone dies due to injuries incured during a fall.</div>
-    </section>
-
-    <section></section>
-
-    <section>
-      <h2>Contact</h2>
-      <form class="" action="index.html" method="post">
-        <input type="text" name="name" placeholder="Your Name"></br>
-        <input type="text" name="email" placeholder="Email"></br>
-        <input type="text" name="message" placeholder="Message"></br>
-        <button>Submit</button>
-      </form>
-    </section>
-    <footer>Westerly Devices, LLC.</footer>
+    <h1>Westerly website coming soon...</h1>
   </body>
 </html>
