--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <section>
-      <h1>Westerly</h1>
+      <h1><em>W</em>esterly</h1>
     </section>
 
     <section id="about">
