adding a meta data tag for mobile responsive

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Westerly</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <meta name="google-site-verification" content="V2UIWZThk6As7Pvb8RfY9xjmUcRqKsrtcW9n7IuA72Y" />
@@ -24,7 +25,9 @@
     </section>
 
     <section id="about">
-      <div id="animation-container"></div>
+      <div id="animation-container">
+        <img src="./media/images/falling.png" alt="Sorry. This image decided to go on a coffee break.">
+      </div>
     </section>
 
     <section id="contact">
