--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <meta name="google-site-verification" content="V2UIWZThk6As7Pvb8RfY9xjmUcRqKsrtcW9n7IuA72Y" />
-    <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="js/animation.js"></script>
   </head>
   <body>
