adding home link

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header>
       <ul>
         <li><a href="#about">About</a></li>
-        <li>W</li>
+        <li><a href="#home">W</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </header>
 
-    <section>
+    <section id="home">
       <h1><em>W</em>esterly</h1>
     </section>
 
