correcting the email link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="contact">
       <div id="contact-container">
         <h2>Contact us to learn more:</h2>
-        <p><a href="mailto:ashleigh@wester.ly"></a>&#xE801</p>
+        <p><a href="mailto:ashleigh@wester.ly">&#xE801</a></p>
       </div> 
     </section>
 
