--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       <div id="animation-container">
         <img src="./media/images/falling.png" alt="Sorry. This image decided to go on a coffee break.">
         <h4 id="first">Sometimes people fall...</h4>
-<!--         <h4 id="second">When they do, shouldn't someone know about it?</h4>
+        <h4 id="second">When they do, shouldn't someone know about it?</h4>
         <h4 id="third">Let <em>W</em>esterly help.</h4>
         <h4 id="fourth">Modern Technology</h4>
         <h4 id="fifth">Streamlined Process</h4>   
         <h4 id="sixth">Elegant Design</h4>
         <h4 id="seventh"><em>W</em>esterly</h4>  
-        <h4 id="eigth"><i>Beautiful Security</i></h4> -->
+        <h4 id="eigth"><i>Beautiful Security</i></h4>
       </div>
     </section>
 
