--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Contact us to learn more:</h2>
         <p><a href="mailto:ashleigh@wester.ly">&#xE801</a></p>
       </div> 
-      <h4><em>W</em>esterly is a company dedicated to the <i>dignity</i> and <i>liberty</i> of every individual who would benefit from the <i>peace-of-mind</i> that personalized fall-detection device would provide.</h4>
+      <h4><em>W</em>esterly is a company dedicated to the <i>dignity</i> and <i>liberty</i> of every individual who would benefit from the <i>peace-of-mind</i> that a personalized fall-detection would provide.</h4>
     </section>
 
     <footer>Westerly, LLC.</footer>
