--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Westerly</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:100' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="image/png" href="./media/images/favicon.png">
+    <link rel="icon" type="image/png" href="./media/images/favicon-inverted.png">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <meta name="google-site-verification" content="V2UIWZThk6As7Pvb8RfY9xjmUcRqKsrtcW9n7IuA72Y" />
    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
